# github-toolkit

./: .gitignore  CLAUDE.md  GitHubRepoTools.sln  README.md  UX_SHOWCASE.md  biome.json  package-lock.json  package.json  renovate.json  vite.config.ts
.github/workflows/: ci.yml  docs.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md
DevHubSync.BlazorApp/: DevHubSync.BlazorApp.csproj  Program.cs  appsettings.json
DevHubSync.BlazorApp/Components/: _Imports.razor
DevHubSync.BlazorApp/Models/: Configuration.cs  DevOpsCommit.cs  Repository.cs
DevHubSync.BlazorApp/Properties/: launchSettings.json
DevHubSync.BlazorApp/Services/: DevOpsService.cs  GitHubService.cs  (+4 more)
GitHubRepoTools.Cli/: GitHubRepoTools.Cli.csproj
automate/: index.html
devhub-sync/: CLAUDE.md  DevHubSync.sln  README.md
repo-tools/: BUGFIX_MARKUP_ESCAPING.md  ENHANCEMENTS.md
skills/: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/backlog/: commands.rs
src-tauri/src/diagnostics/: commands.rs  mod.rs  types.rs
src-tauri/src/github/: auth.rs  client.rs  error.rs  mod.rs  repos.rs  token.rs  types.rs
src-tauri/src/mcp/: server.rs
src-tauri/src/storage/: backlog.rs  commands.rs  db.rs  diagnostics.rs  mod.rs  scan_sessions.rs
(+294 files in other folders)
