[package]
name = "github-automate"
version = "0.1.0"
edition = "2024"
default-run = "github-automate"

[lib]
name = "github_automate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "github-automate-mcp"
path = "src/bin/mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.23"
specta-typescript = "0.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
reqwest = { version = "0.13", features = ["json", "rustls", "form"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = "0.4"
rusqlite = { version = "0.33", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "0.17", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dirs = "6"
